dist_man1_MANS=

if BUILD_BITNAMICOIND
  dist_man1_MANS+=bitnamicoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitnamicoin-qt.1
endif

if BUILD_BITNAMICOIN_CLI
  dist_man1_MANS+=bitnamicoin-cli.1
endif

if BUILD_BITNAMICOIN_TX
  dist_man1_MANS+=bitnamicoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITNAMICOIN_WALLET
  dist_man1_MANS+=bitnamicoin-wallet.1
endif
endif
